  - add command "readpicture" to download embedded pictures
  - command "moveoutput" moves an output between partitions
  - command "delpartition" deletes a partition
  - show partition name in "status" response
* tags
  - new tags "Grouping" (for ID3 "TIT1"), "Work" and "Conductor"
* input
  - curl: support "charset" parameter in URI fragment
  - ffmpeg: allow partial reads
* archive
  - iso9660: support seeking
* playlist
  - cue: integrate contents in database
* decoder
  - mad: remove option "gapless", always do gapless
  - sidplay: add option "default_genre"
  - sidplay: map SID name field to "Album" tag
  - sidplay: add support for new song length format with libsidplayfp 2.0
  - vorbis, opus: improve seeking accuracy
* playlist
  - flac: support reading CUE sheets from remote FLAC files
* filter
  - ffmpeg: new plugin based on FFmpeg's libavfilter library
  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
  - volume: convert S16 to S24 to preserve quality and reduce dithering noise
  - dsd: add integer-only DSD to PCM converter
* output
  - jack: add option "auto_destination_ports"
  - jack: report error details
  - pulse: add option "media_role"
  - solaris: support S8 and S32
* lower the real-time priority from 50 to 40
* switch to C++17
  - GCC 7 or clang 4 (or newer) recommended

ver 0.21.23 (2020/04/23)
* protocol
  - add tag fallback for AlbumSort
* storage
  - curl: fix corrupt "href" values in the presence of XML entities
  - curl: unescape "href" values
* input
  - nfs: fix crash bug
  - nfs: fix freeze bug on reconnect
* decoder
  - gme: adapt to API change in the upcoming version 0.7.0
* output
  - alsa: implement channel mapping for 5.0 and 7.0
* player
  - drain outputs at end of song in "single" mode
* Windows
  - fix case insensitive search

ver 0.21.22 (2020/04/02)
* database
  - simple: optimize startup
* input
  - curl: fix streaming errors on Android
* playlist
  - rss: support MIME type application/xml
* mixer